load image magick extension
owncloud likes the image magick extension, so make the loading explicit in
uwsgi so that we don't depend on global php configuration

--- a/owncloud/uwsgi.ini
+++ b/owncloud/uwsgi.ini
@@ -33,6 +33,7 @@ php-allowed-ext = /core/ajax/appconfig.php
 
 php-set = date.timezone=Europe/Skopje
 php-set = open_basedir=/srv/http/owncloud:/tmp/:/usr/share/pear/:/usr/share/webapps/owncloud
+php-set = extension=imagick.so
 
 processes = 10
 cheaper = 2
