set the same unix domain sockets in uwsgi and nginx

--- a/drupal/drupal.ini
+++ b/drupal/drupal.ini
@@ -5,6 +5,7 @@ master      = true
 processes   = 5
 http-socket = :8000
 http-socket-modifier1 = 14
+socket      = /run/uwsgi/my-drupal-site.sock
 
 plugin      = php
 php-docroot = %(drupal_dir)
