--- a/drupal/nginx.conf
+++ b/drupal/nginx.conf
@@ -4,7 +4,7 @@ server {
   location ~ .php$ {
     include uwsgi_params;
     uwsgi_modifier1 14;
-    uwsgi_pass 127.0.0.1:4012;
+    uwsgi_pass unxi:/run/uwsgi/my-drupal-site.sock;
   }
 
   location = / {
