--- a/wordpress/wordpress2.ini
+++ b/wordpress/wordpress2.ini
@@ -32,7 +32,7 @@ static-skip-ext = .php
 static-skip-ext = .inc
 offload-threads = 5
 
-# clean urls
+# clean urls for internal http server (nginx can do it too)
 plugin     = router_rewrite
 route      = ^/.*\.php$ last:
 route      = ^/wp-admin/ last:
