--- a/nextcloud/nextcloud.ini
+++ b/nextcloud/nextcloud.ini
@@ -1,5 +1,6 @@
+# /etc/uwsgi/nextcloud.ini
 [uwsgi]
-# default for local testing run it like "uwsgi --ini nextcloud.ini"
+; default for local testing run it like "uwsgi --ini nextcloud.ini"
 ini = :nextcloud
 http-socket = :8000
 http-socket-modifier1 = 14
@@ -9,8 +10,8 @@ static-skip-ext = .php
 static-skip-ext = .inc
 
 [nginx]
-# for production with nginx run it like "uwsgi --ini nextcloud.ini:nginx"
-# configuration in /etc/nextcloud see pr. 660
+; for production with nginx run it like "uwsgi --ini nextcloud.ini:nginx"
+; configuration in /etc/nextcloud see PR#660
 ini = :nextcloud
 socket = /run/nextcloud.sock
 chmod-socket = 666
