proper nginx match
either match file.php or file.php/path-info but not file.phpxxx

--- a/nextcloud/nginx.conf
+++ b/nextcloud/nginx.conf
@@ -31,7 +31,7 @@ server {
     deny all;
   }
 
-  location ~ ^(.+\.php)(.*)$ {
+  location ~ \.php(?:$|/) {
     include uwsgi_params;
     uwsgi_modifier1 14;
     uwsgi_pass unix:///run/nextcloud.sock;
