--- a/wordpress/nginx.conf
+++ b/wordpress/nginx.conf
@@ -1,16 +1,21 @@
 server {
   listen 80;
+  server_name _;
+
+  location /wp-content {
+    root /srv/wp-content/;
+  }
 
   location / {
     # This is cool because no php is touched for static content.
     # include the "?$args" part so non-default permalinks doesn't break when using query string
-    root /srv/wordpress/;
-    try_files $uri $uri/ /index.php?$args;
+    root /usr/share/webapps/wordpress/;
+    try_files $uri $uri/ /index.php$request_uri;
   }
 
-  location ~ \.php$ {
+  location ~ \.php(?:/.*|)$ {
     include uwsgi_params;
     uwsgi_modifier1 14;
-    uwsgi_pass unix:/run/uwsgi/my-wordpress-site.sock;
+    uwsgi_pass unix:/run/wordpress.sock;
   }
 }
