use static-map instead of a uwsgi route

--- a/mediawiki/uwsgi.ini
+++ b/mediawiki/uwsgi.ini
@@ -7,8 +7,8 @@ http-socket-modifier1 = 14
 static-check = %(mediawiki_dir)
 static-skip-ext = .php
 static-skip-ext = .inc
+static-map = /images=%(mediawiki_images)
 
-route = ^/images/(.*) static:%(mediawiki_images)/$1
 route = \.php$ last:
 route-uri = ^/(.*) rewrite:/index.php?title=$1
 
@@ -35,6 +35,7 @@ php-set = extension=intl.so
 
 php-docroot = %(mediawiki_dir)
 php-exec-before = define('MW_CONFIG_FILE', '%(mediawiki_conf)');
+#php-constant = MW_CONFIG_FILE=%(mediawiki_conf) # in uwsgi 2.1
 
 php-allowed-ext = /index.php
 php-allowed-ext = /load.php
