small updates to the cgi example

--- a/cgi-bin/nginx.conf
+++ b/cgi-bin/nginx.conf
@@ -5,6 +5,6 @@ server {
   location /cgi-bin {
     include uwsgi_params;
     uwsgi_modifier1 9;
-    uwsgi_pass 127.0.0.1:3031;
+    uwsgi_pass unix:///run/cgi-bin.sock;
   }
 }
