--- a/cgi-bin/uwsgi.ini
+++ b/cgi-bin/uwsgi.ini
@@ -1,12 +1,18 @@
 [uwsgi]
+ini = :cgi-bin
+http-socket = :8000
+http-socket-modifier1 = 9
+
+[nginx]
+ini = :cgi-bin
+socket = /run/cgi-bin.sock
+chmod = 666
+
+[cgi-bin]
 plugins = cgi
-threads = 5
+async = 20
+ugreen = true
 
-#http-socket = :8080
-#http-socket-modifier1 = 9
-
-socket = 127.0.0.1:3031
-
+cgi = /cgi-bin=/srv/http/cgi-bin
 cgi-allowed-ext = .sh
 cgi-allowed-ext = .cgi
-cgi = /cgi-bin=%d
