small updates to the mailman example

--- a/mailman/uwsgi.ini
+++ b/mailman/uwsgi.ini
@@ -9,7 +9,8 @@ uid = nobody
 gid = list
 
 plugins = cgi
-threads = 20
+async = 20
+ugreen = true
 # Debian's standard location
 cgi = /=/usr/lib/cgi-bin/mailman
 cgi-index = listinfo
