--- a/mailman/nginx.conf
+++ b/mailman/nginx.conf
@@ -22,6 +22,6 @@ server {
   location / {
     include uwsgi_params;
     uwsgi_modifier1 9;
-    uwsgi_pass /run/mailman.sock;
+    uwsgi_pass unix:///run/mailman.sock;
   }
 }
