s/project_dir/nextcloud_dir/

--- a/nextcloud/uwsgi.ini
+++ b/nextcloud/uwsgi.ini
@@ -5,7 +5,7 @@ ini = :nextcloud
 http-socket = :8000
 http-socket-modifier1 = 14
 
-check-static = %(project_dir)
+check-static = %(nextcloud_dir)
 static-skip-ext = .php
 static-skip-ext = .inc
 
@@ -22,10 +22,10 @@ env = NEXTCLOUD_CONFIG_DIR=/etc/nextcloud/
 master = true
 processes = 4
 
-project_dir = /usr/share/webapps/nextcloud
+nextcloud_dir = /usr/share/webapps/nextcloud
 
 plugins = php
-php-docroot = %(project_dir)
+php-docroot = %(nextcloud_dir)
 php-index = index.php
 
 php-set = extension=pdo_sqlite.so
