--- a/nextcloud/uwsgi.ini
+++ b/nextcloud/uwsgi.ini
@@ -40,3 +40,21 @@ php-set = extension=xmlrpc.so
 php-set = extension=xsl.so
 php-set = extension=imagick.so
 php-set = extension=zip.so
+
+# these are optional but recommended
+php-allowed-ext = /ocs/v1.php
+php-allowed-ext = /ocs/v2.php
+php-allowed-ext = /index.php
+php-allowed-ext = /cron.php
+php-allowed-ext = /status.php
+php-allowed-ext = /remote.php
+php-allowed-ext = /public.php
+php-allowed-ext = /core/templates/403.php
+php-allowed-ext = /core/templates/404.php
+php-allowed-ext = /core/ajax/update.php
+
+php-set = date.timezone=Europe/Berlin
+php-set = open_basedir=
+php-set = session.save_path=/tmp
+php-set = post_max_size=1000M
+php-set = upload_max_filesize=1000M
