improve .well-known redirects

--- a/nextcloud/nginx.conf
+++ b/nextcloud/nginx.conf
@@ -17,8 +17,8 @@ server {
   add_header X-Download-Options noopen;
   add_header X-Permitted-Cross-Domain-Policies none;
 
-  rewrite ^/.well-known/carddav /remote.php/dav/ permanent;
-  rewrite ^/.well-known/caldav /remote.php/dav/ permanent;
+  rewrite ^/.well-known/carddav  $scheme://$host/remote.php/dav/ permanent;
+  rewrite ^/.well-known/caldav   $scheme://$host/remote.php/dav/ permanent;
 
   # The following 2 rules are only needed with webfinger
   rewrite ^/.well-known/host-meta /public.php?service=host-meta  last;
