php-constant now in uwsgi 2.0.14

--- a/mediawiki/uwsgi.ini
+++ b/mediawiki/uwsgi.ini
@@ -34,8 +34,10 @@ php-set = extension=iconv.so
 php-set = extension=intl.so
 
 php-docroot = %(mediawiki_dir)
-php-exec-before = define('MW_CONFIG_FILE', '%(mediawiki_conf)');
-#php-constant = MW_CONFIG_FILE=%(mediawiki_conf) # in uwsgi 2.1
+# before 2.0.14
+#php-exec-before = define('MW_CONFIG_FILE', '%(mediawiki_conf)');
+# in uwsgi 2.0.14:
+php-constant = MW_CONFIG_FILE=%(mediawiki_conf)
 
 php-allowed-ext = /index.php
 php-allowed-ext = /load.php
