comment about a private mount for the service
show how to combine `nsenter` and privileged `ExecStartPost=` (prefixed
with a `+`) to make a private (possibly bind) mount for the service.

also `MountFlags=private` is needed.

--- a/nextcloud/systemd.service
+++ b/nextcloud/systemd.service
@@ -18,6 +18,8 @@ NoNewPrivileges=yes
 PrivateDevices=yes
 PrivateTmp=yes
 ProtectSystem=full
+MountFlags=private
+#ExecStartPost=+/usr/bin/nsenter -t $MAINPID -m /bin/mount --bind /some/aditional/path /home/nextcloud/data/user/files/xxx
 
 [Install]
 WantedBy=multi-user.target
