nextcloud.service should require nextcloud.socket
… since it doesn't work without it in this configuration - makes it easy
to have correct permissions between nginx and uwsgi without runing
anything with extra privileges.

Also rename the files so it's not confusing

--- a/nextcloud/nextcloud.service
+++ b/nextcloud/nextcloud.service
@@ -3,6 +3,7 @@
 Description=nextcloud uwsgi service
 After=network.target redis.service
 Before=nginx.service
+Requires=nextcloud.service
 
 [Service]
 Type=notify
