--- a/nextcloud/uwsgi.ini
+++ b/nextcloud/uwsgi.ini
@@ -5,7 +5,7 @@ ini = :nextcloud
 http-socket = :8000
 http-socket-modifier1 = 14
 
-check-static = %(nextcloud_dir)
+static-check = %(nextcloud_dir)
 static-skip-ext = .php
 static-skip-ext = .inc
 
