offload threads for static file serving

--- a/nextcloud/uwsgi.ini
+++ b/nextcloud/uwsgi.ini
@@ -8,6 +8,7 @@ http-socket-modifier1 = 14
 static-check = %(nextcloud_dir)
 static-skip-ext = .php
 static-skip-ext = .inc
+offload-threads = 2
 
 [nginx]
 ; for production with nginx run it like "uwsgi --ini nextcloud.ini:nginx"
