--- a/nextcloud/nextcloud.service
+++ b/nextcloud/nextcloud.service
@@ -12,9 +12,10 @@ Group=nextcloud
 Environment=NEXTCLOUD_CONFIG_DIR=/etc/nextcloud/
 ExecStartPre=/usr/bin/php /usr/share/webapps/nextcloud/occ upgrade
 ExecStart=/usr/bin/uwsgi --ini /etc/uwsgi/nextcloud.ini:nginx
+ExecStop=/bin/kill -INT $MAINPID
 ExecReload=/usr/bin/php /usr/share/webapps/nextcloud/occ files:scan --all
 ExecReload=/bin/kill -HUP $MAINPID
-ExecStop=/bin/kill -INT $MAINPID
+TimeoutSec=infinity
 Restart=always
 KillSignal=SIGQUIT
 NoNewPrivileges=yes
