--- a/wordpress/uwsgi.ini
+++ b/wordpress/uwsgi.ini
@@ -12,12 +12,11 @@ route      = ^/.*\.php$ last:
 route      = ^/wp-admin/ last:
 route-uri  = ^/(.*) rewrite:/index.php/$1
 
-[nginx]
+[service]
 ini = :wordpress
-socket = /run/wordpress.sock
-chmod-socket = 660
-
-env = WP_CONTENT_DIR=/var/lib/wordpress
+die-on-term = yes
+logger = systemd
+log-date =
 
 [wordpress]
 master      = true
